# software_project

./: README.md
admin/: .gitignore  app.py  pyproject.toml
admin/public/: style.css
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: __init__.py  issue.py  item.py  label.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  issues.py  items.py  users.py
admin/src/web/controllers/api/: issues.py
admin/src/web/helpers/: auth.py  handlers.py
admin/src/web/templates/: home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/issues/: edit.html  index.html  new.html
admin/src/web/templates/items/: index.html
admin/src/web/templates/users/: index.html
admin/tests/: test_web.py
