[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Milka Sofia Ivanoff <ivanoffmilka@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-shell-ipython = "^0.5.1"
flask-session = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
